xây dựng giao diện có back-end ổn định hơn